--- a/css/style.css
+++ b/css/style.css
@@ -27,11 +27,16 @@ header{
     width: 60% !important;
 }
 .position{
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 .center{
     text-align: center;
+}
+.justified{
+    text-align: justify;
+    padding-left: 25px;
+    padding-right: 25px;
 }
 img{
     width: 90%;
@@ -51,8 +56,3 @@ img{
 .space-margin{
     margin-bottom: 10px;
 }
-/* .divisor {
-    max-height: 80%;
-    border-width: 0.2rem;
-    border-color: #f4623a;
-  } */
